--- a/index.css
+++ b/index.css
@@ -13,13 +13,14 @@ body {
 
 
 #formulario {
-    width: 350px;
-    background-color: rgb(23, 226, 131);
+    width: 450px;
+    height: auto;
+    background-color: rgb(38, 240, 146);
     font-family: "Caveat", cursive;
-    font-size: 20px;
+    font-size: 10;
     margin: auto;
     padding: 10px;
-    margin-top: 15px;
+    margin-top: 10px;
     border-radius: 10px; 
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
 }
@@ -29,7 +30,7 @@ body {
     width: 100px;
     height: 40px;
     margin: 20px auto; 
-    background-color: #007bff;
+    background-color: #04854f;
     color: white;
     border: none;
     border-radius: 5px;
@@ -38,26 +39,27 @@ body {
 }
 
 #button:hover {
-    background-color: #0056b3;
+    background-color: #93ffbc;
+    color: black;
 }
 
-#Pendiente{
-    background-color: yellow; 
-    font-size: 12px;
-    color: beige;
+.pendiente {
+    background-color: yellow;
+    color: rgb(0, 0, 0);
     border-radius: 20px;
     padding: 8px;
-    display: inline-block;
-    margin-right: 5px; 
+    margin-right: 5px;
+    font-style: italic;
+    font-weight: bold;
 }
-#Enviada {
-    background-color: rgb(15, 243, 64); 
-    font-size: 12px;
-    color: beige;
+.enviada {
+    background-color: rgb(15, 243, 64);
+    color: rgb(0, 0, 0);
     border-radius: 20px;
     padding: 8px;
-    display: inline-block;
-    margin-right: 5px; 
+    margin-right: 5px;
+    font-style: italic;
+    font-weight: bold;
 }
 
 
@@ -87,32 +89,27 @@ label {
 input[type="text"],
 select,
 input[type="email"] { 
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
+    width: 90%;
+    padding: 5px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
 
-.boton_dato {
-    color: beige;
-    width: 100px;
-    height: 40px;
-    margin: 10px auto;
-    background-color: rgb(6, 110, 75);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s; 
-}
-
-.boton_dato:hover {
-    background-color: #0056b3;
-}
-
 
 #list {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: 15px;    
+}
+.datos{
+    display: flex;
+    flex-direction: row; 
+    justify-content:space-between;
+    width: 100%;
+    align-items: flex-start;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    width: 800px;
 }
