--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
     text-align: center;
     background-color: #f0f0f0; 
-    height: 100vh;
+    height: auto;
     margin: 0;
 }
 
