--- a/index.css
+++ b/index.css
@@ -59,23 +59,29 @@ body {
     color: black;
 }
 
-.pendiente {
-    background-color: rgb(248, 179, 76);
+.parrafo-status.pendiente {
+    background-color: pink;
     color: rgb(0, 0, 0);
     border-radius: 20px;
     padding: 8px;
     margin-right: 5px;
     font-style: italic;
     font-weight: bold;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
 }
-.enviada{
-    background-color: whitesmoke;
+.parrafo-status.enviada{
+    background-color: #ccffcf;
     color: rgb(0, 0, 0);
     border-radius: 20px;
     padding: 8px;
     margin-right: 5px;
     font-style: italic;
     font-weight: bold;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
 }  
 
 
@@ -125,9 +131,8 @@ input[type="email"] {
     margin: 2px;
     font-style: italic;
     font-weight: bold;
-    display: flex;
-    flex-direction: row; 
-    justify-content:space-between;
+    display: grid;
+    grid-template-columns: 2fr 3fr 1fr 1fr;;
     width: 100%;
     align-items: flex-start;
     border-width: 1px;
@@ -199,26 +204,11 @@ input[type="email"] {
     color: #333;
 }
 .swal2-actions{
-
-   background-color: #04854f;
-    color: whitesmoke;
-}
-/* background-color:#cbf3da;
-    border-radius: 10px; 
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 15px; box-shadow:#04854f 
-     background-color: #7066e0;margin: .3125em;
-    padding: .625em 1.1em;
-    transition: box-shadow .1s;
-    box-shadow: 0 0 0 3px rgba(0,0,0,0);
-    font-weight: 500;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    cursor: pointer;
-    border: 0;
-    border-radius: .25em;
-    background: initial;
-    background-color: ;
-    color: #fff;
-    font-size: 1em;
-    display: inline-block;*/
   
+   background-color: #04854f;
+   color: #04854f;
+}  
+.swal2-styled{
+    background-color: whitesmoke;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
